@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--suppress MavenModelInspection, MavenModelInspection, MavenModelInspection -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gruelbox</groupId>
   <artifactId>transactionoutbox-parent</artifactId>
@@ -26,11 +27,11 @@
     <test.dir>src/test/java</test.dir>
     <skip.format>false</skip.format>
     <!-- Dependency versions -->
-    <logback.version>1.4.7</logback.version>
+    <logback.version>1.4.14</logback.version>
     <revision>1.3.99999-SNAPSHOT</revision>
-    <junit.jupiter.version>5.9.3</junit.jupiter.version>
-    <testcontainers.version>1.18.1</testcontainers.version>
-    <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
+    <junit.jupiter.version>5.10.1</junit.jupiter.version>
+    <testcontainers.version>1.19.3</testcontainers.version>
+    <maven.source.plugin.version>3.3.0</maven.source.plugin.version>
     <nexus.staging.plugin.version>1.6.13</nexus.staging.plugin.version>
     <maven.gpg.plugin.version>3.1.0</maven.gpg.plugin.version>
   </properties>
@@ -38,20 +39,21 @@
     <module>transactionoutbox-core</module>
     <module>transactionoutbox-jackson</module>
     <module>transactionoutbox-guice</module>
-    <module>transactionoutbox-jooq</module>
     <module>transactionoutbox-quarkus</module>
+    <module>transactionoutbox-testing</module>
+    <module>transactionoutbox-acceptance</module>
   </modules>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>2.0.7</version>
+        <version>2.0.9</version>
       </dependency>
       <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
-        <version>1.14.4</version>
+        <version>1.14.11</version>
         <optional>true</optional>
       </dependency>
       <dependency>
@@ -68,7 +70,7 @@
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>1.18.24</version>
+        <version>1.18.30</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -116,13 +118,13 @@
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
-        <version>2.1.214</version>
+        <version>2.2.224</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>com.zaxxer</groupId>
         <artifactId>HikariCP</artifactId>
-        <version>5.0.1</version>
+        <version>5.1.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -152,13 +154,13 @@
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>42.6.0</version>
+        <version>42.7.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.30</version>
+        <version>8.0.33</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -179,7 +181,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.12.0</version>
         <configuration>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
@@ -192,9 +194,9 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.3</version>
         <configuration>
-          <argLine>-Doracle.jdbc.javaNetNio=false</argLine>
+          <argLine>-Doracle.jdbc.javaNetNio=false -XX:+EnableDynamicAgentLoading</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -224,7 +226,7 @@
       <plugin>
         <groupId>com.spotify.fmt</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
-        <version>2.20</version>
+        <version>2.21.1</version>
         <configuration>
           <verbose>true</verbose>
           <filesNamePattern>.*\.java</filesNamePattern>
@@ -244,7 +246,7 @@
       <plugin>
         <groupId>au.com.acegi</groupId>
         <artifactId>xml-format-maven-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>3.3.1</version>
       </plugin>
     </plugins>
   </build>
@@ -259,7 +261,7 @@
               <dependency>
                 <groupId>me.fabriciorby</groupId>
                 <artifactId>maven-surefire-junit5-tree-reporter</artifactId>
-                <version>1.1.0</version>
+                <version>1.2.1</version>
               </dependency>
             </dependencies>
             <configuration>
@@ -267,18 +269,20 @@
               <consoleOutputReporter>
                 <disable>true</disable>
               </consoleOutputReporter>
-              <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporterUnicode"/>
+              <statelessTestsetInfoReporter
+                  implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporterUnicode"/>
             </configuration>
           </plugin>
         </plugins>
       </build>
     </profile>
     <profile>
-      <id>spring</id>
+      <id>java-17-modules</id>
       <activation>
         <jdk>[17,)</jdk>
       </activation>
       <modules>
+        <module>transactionoutbox-jooq</module>
         <module>transactionoutbox-spring</module>
       </modules>
     </profile>
@@ -370,7 +374,7 @@
               <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.24</version>
+                <version>1.18.30</version>
               </dependency>
             </dependencies>
             <executions>
@@ -390,7 +394,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.5.0</version>
+            <version>3.6.3</version>
             <configuration>
               <failOnError>true</failOnError>
               <quiet>true</quiet>
